[package]
name = "worgen_x"
version = "1.2.2"
edition = "2021"
authors = ["Xen0rInspire"]
license = "GNU General Public License v3.0"
repository = "https://github.com/XenorInspire/WorgenX"
homepage = "https://github.com/XenorInspire/WorgenX"
keywords = ["password", "cracking", "wordlist", "entropy", "random", "generator"]
readme = "README.md"
description = "A powerful command line tool to generate relevant wordlists for password cracking. It can also generate random passwords with a good entropy."

[features]
cli = ["serde_json", "clap"]
gui = []

[dependencies]
rand = { version = "0.8.5", features = ["getrandom"], default-features = false }
thiserror = "2.0.11"
num_cpus = "1.16.0"
serde_json = { version = "1.0.135", optional = true, features = ["std"], default-features = false }
indicatif = { version = "0.17.9", default-features = false }
clap = { version = "4.5.26", optional = true, features = ["std"], default-features = false }
md-5 = "0.10.6"
sha-1 = "0.10.1"
sha2 = "0.10.8"
digest = "0.10.7"
hex = "0.4.3"
sha3 = "0.10.8"
blake2 = "0.10.6"
whirlpool = "0.10.4"
