[package]
name = "worgen_x"
version = "1.2.2"
edition = "2021"
authors = ["Xen0rInspire"]
license = "GNU General Public License v3.0"
repository = "https://github.com/XenorInspire/WorgenX"
homepage = "https://github.com/XenorInspire/WorgenX"
keywords = ["password", "cracking", "wordlist", "entropy", "random", "generator"]
readme = "README.md"
description = "A powerful command line tool to generate relevant wordlists for password cracking. It can also generate random passwords with a good entropy."

[features]
cli = ["serde_json", "clap"]
gui = []

[dependencies]
rand = { version = "0.8.5", features = ["getrandom"], default-features = false }
thiserror = { version = "2.0.11", default-features = false }
num_cpus = { version = "1.16.0", default-features = false }
serde_json = { version = "1.0.139", optional = true, features = ["std"], default-features = false }
indicatif = { version = "0.17.11", default-features = false }
clap = { version = "4.5.31", optional = true, features = ["std"], default-features = false }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
md-5 = { version = "0.10.6", default-features = false }
sha-1 = { version = "0.10.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
digest = { version = "0.10.7", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
whirlpool = { version = "0.10.4", default-features = false }
